--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
           cd ./script.sopcast.player
-          git archive --prefix=script.sopcast.player/ -o script.sopcast.player.zip -9 HEAD
+          git archive --prefix=script.sopcast.player/ -o ../script.sopcast.player.zip -9 HEAD
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.0.0
