--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,19 @@ name: Upload Release Asset
 
 jobs:
   build:
+    env:
+      zip_version: format( ${{ github.ref }}, "v", "")
+      zip_name: format( "script.sopcast.player-{0}.zip", ${{ zip_version }} )
     name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@master
       - name: Build project # This would actually build your project, using zip for an example artifact
+        working-directory: script.sopcast.player
         run: |
-          cd ./script.sopcast.player
-          git archive --prefix=script.sopcast.player/ -o ../script.sopcast.player.zip -9 HEAD
+          git archive --prefix=script.sopcast.player/ -o ${{zip_name}} -9 HEAD
+          ls -l ..
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -34,7 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./script.sopcast.player.zip
-          asset_name: script.sopcast.player.zip
+          asset_path: ./script.sopcast.player/${{zip_name}}
+          asset_name: ${{zip_name}}
           asset_content_type: application/zip
 
