--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,7 @@ name: Upload Release Asset
 jobs:
   build:
     env:
-      zip_version: format( ${{ github.ref }}, "v", "")
-      zip_name: format( "script.sopcast.player-{0}.zip", ${{ zip_version }} )
+      zip_name: "script.sopcast.player.zip"
     name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +18,7 @@ jobs:
       - name: Build project # This would actually build your project, using zip for an example artifact
         working-directory: script.sopcast.player
         run: |
-          git archive --prefix=script.sopcast.player/ -o ${{zip_name}} -9 HEAD
+          git archive --prefix=script.sopcast.player/ -o ../$zip_name -9 HEAD
           ls -l ..
       - name: Create Release
         id: create_release
@@ -38,7 +37,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./script.sopcast.player/${{zip_name}}
-          asset_name: ${{zip_name}}
+          asset_path: ${{ zip_name }}
+          asset_name: ${{ zip_name }}
           asset_content_type: application/zip
 
