--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@master
-      - name: Build project # This would actually build your project, using zip for an example artifact
-        id: build_project
+      - name: Create zip name
+        id: create_name
+        run: echo "::set-output name=zip_name::$(${ADDON_ID}-${GITHUB_REF#refs/tags/v}.zip)"
+      - name: Build project
         working-directory: script.sopcast.player
-        run: |
-          echo "::set-output name=zip_name::$(${ADDON_ID}-${GITHUB_REF#v}.zip)"
-          git archive --prefix=${ADDON_ID}/ -o ../artifact.zip -9 HEAD
+        run: git archive --prefix=${ADDON_ID}/ -o ../artifact.zip -9 HEAD
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -40,6 +40,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./artifact.zip
-          asset_name: ${{ steps.build_project.outputs.zip_name }}
+          asset_name: ${{ steps.create_name.outputs.zip_name }}
           asset_content_type: application/zip
 
